tests/typing/fail/type-mismatch-06.stderr
error: type mismatch: left has type `int`, right has type `unit`
  --> tests/typing/fail/type-mismatch-06.rs:12:14
   |
12 |         () = f();
   |              ^^^
